@@ -7,6 +7,7 @@ import java.awt.event.ActionListener;
 import javax.swing.*;
 
 import edu.colorado.phet.common.phetcommon.model.Property;
+import edu.colorado.phet.common.phetcommon.model.SettableProperty;
 import edu.colorado.phet.common.phetcommon.util.SimpleObserver;
 
 /**
@@ -17,7 +18,7 @@ import edu.colorado.phet.common.phetcommon.util.SimpleObserver;
  * @author Chris Malley
  */
 public class PropertyRadioButton<T> extends JRadioButton {
-    public PropertyRadioButton( String title, final Property<T> property, final T value ) {
+    public PropertyRadioButton( String title, final SettableProperty<T> property, final T value ) {
         super( title );
         final SimpleObserver updateSelected = new SimpleObserver() {
             public void update() {
