@@ -1,3 +1,4 @@
+1/30/2011 Rewrote PropertyCheckBox and PropertyRadioButton to use more general parameter type SettableProperty instead of concrete subclass Property
 1/25/2011 Set the slider in IntensitySlider to paint ticks, see #2682 for motivation and details.
 1/24/2011 Added getters and setters to Time Speed Slider classes
 1/16/2011 Made Property.getInitialValue protected to keep the API for Property as simple as possible for typical usage,
